# update-notes

./: .gitignore  LICENSE  README.md  pyproject.toml
.roo/memory_banks/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
.roo/rules/: rules.md
src/update_notes/: __init__.py  cli.py  processor.py
tests/: test_processor.py
